--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
       async
     ></script>
+    <script src="main.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -26,14 +27,6 @@
       </a>
       <button class="header__scroll">scroll</button>
     </header>
-    <ul class="words">
-      <li class="word">
-        <div>
-          <input type="checkbox" class="word__checkbox" />
-          <span class="word__term">raise</span>
-        </div>
-        <span class="word__definition">들어올리다</span>
-      </li>
-    </ul>
+    <ul class="words"></ul>
   </body>
 </html>
