Set check and btn click listeners

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <i class="fa-solid fa-square-check"></i>
         영어단어장
       </a>
-      <button class="header__scroll">scroll</button>
+      <button class="header__btn header__start">start</button>
+      <button class="header__btn header__scroll header__btn--hidden">
+        scroll
+      </button>
     </header>
     <ul class="words"></ul>
   </body>
